--- a/_posts/2019-11-26-Sinatra3.md
+++ b/_posts/2019-11-26-Sinatra3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  'Sinatra Won't Die
+title:  "Sinatra Won't Die"
 date:   '2019-11-26 16:30:00 -0500'
 categories: blogpost
 ---
